--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,7 @@
 .App {
   min-height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
 }
